Enable restore job

--- a/demo-app/values.yaml
+++ b/demo-app/values.yaml
@@ -16,4 +16,4 @@ backup:
   schedule: "*/5 * * * *"   # кожні 5 хвилин
 
 restore:
-  enabled: false            # спочатку ВИМКНЕНО, потім увімкнемо
+  enabled: true            # спочатку ВИМКНЕНО, потім увімкнемо  №зараз вмикаємо 
